# stm32f407zg

./: .gitignore  README.md
template/fwlib/: stm32f4xx_rcc.c
template/system/delay/: delay.h
template/system/sys/: sys.c
template/system/usart/: usart.c  usart.h
template/user/: CMakeLists.txt  main.c  main.cpp  template.uvoptx  template.uvprojx
test/user/: startup_stm32f40_41xxx.s  test.cpp  test.uvprojx
